--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header img {
 
 .cd {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     flex-basis: 200px;
@@ -48,19 +48,23 @@ header img {
 }
 
 .cd img {
-    max-width: 100%;
+    width: 160px;
+    height: 140px;
+    object-fit: contain;
 }
 
 .cd h3 {
+    width: 100%;
+    height: 50px;
     margin: 20px 0;
     color: white;
-    font-size: 22px;
+    font-size: 18px;
     text-transform: uppercase;
 }
 
 .cd span.author {
     color: grey;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .cd span.year {
