--- a/style.css
+++ b/style.css
@@ -21,9 +21,19 @@ header {
     height: 70px;
     background: rgb(46, 58, 70);
 }
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 header img {
     height: 50px;
     margin-top: 10px;
+}
+
+.select-container label {
+    color: white;
 }
 
 .cds-container {
@@ -35,7 +45,7 @@ header img {
 }
 
 .cd {
-    display: flex;
+    display: none;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
@@ -47,6 +57,10 @@ header img {
     text-align: center;
 }
 
+.cd.active {
+    display: flex;
+}
+
 .cd img {
     width: 160px;
     height: 140px;
@@ -55,7 +69,7 @@ header img {
 
 .cd h3 {
     width: 100%;
-    height: 50px;
+    height: 65px;
     margin: 20px 0;
     color: white;
     font-size: 18px;
